Add remi, modify nginx template

--- a/nodes/webapp.json
+++ b/nodes/webapp.json
@@ -21,7 +21,9 @@
     ]
   }
   ,"run_list":[
-    "recipe[php]"
+    "recipe[iptables::disabled]"
+    ,"recipe[selinux::disabled]"
+    ,"recipe[php]"
     ,"recipe[nginx]"
     ,"recipe[php-fpm]"
     ,"recipe[mysql::server]"
